[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r40350

--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -14,9 +14,9 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2006-05-20 12:36-0500\n"
+"PO-Revision-Date: 2006-08-30 23:27+0300\n"
 "Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
-"Language-Team: Hebrew\n"
+"Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -48,7 +48,7 @@ msgstr ""
 #: ../nobootloader.templates:9
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "לחלופין, תוכל לאתחל את הקרנל ידנית ע\"י הכנסה של:"
+msgstr "לחלופין, תוכל לאתחל את הקרנל ידנית על ידי הכנסה של:"
 
 #. Type: note
 #. Description
@@ -75,8 +75,8 @@ msgid ""
 msgstr ""
 "כמה משתנים צריכים להקבע ב-Netwinder·NeTTrom·firmware כדי שהמערכת שלך תאתחל "
 "את דביאן אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש, וה-firmware תנסה "
-"לאתחל באופן אוטומטי. תוכל לבטל את זה ע\"י לחיצה על מקש כלשהו. במקרה זה תגיע "
-"אל מערכת הפקודות של NeTTrom שם תוכל לבצע את הפקודות הבאות:"
+"לאתחל באופן אוטומטי. תוכל לבטל את זה על ידי לחיצה על מקש כלשהו. במקרה זה "
+"תגיע אל מערכת הפקודות של NeTTrom שם תוכל לבצע את הפקודות הבאות:"
 
 #. Type: note
 #. Description
