--- a/debian/po/wo.po
+++ b/debian/po/wo.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: wo\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2006-08-28 15:00+0000\n"
+"PO-Revision-Date: 2006-09-05 19:50+0000\n"
 "Last-Translator: Mouhamadou Mamoune Mbacke <mouhamadoumamoune@gmail.com>\n"
 "Language-Team: Wolof <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -94,7 +94,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:52
 msgid "No boot loader installed"
-msgstr "Amul benn porogaraam u demaare bu ñu istale"
+msgstr "Amul benn prograam u demaare bu ñu istale"
 
 #. Type: note
 #. Description
