--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -3,23 +3,25 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
+# translation of he.po to Hebrew
 # Hebrew messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# <>, 2004.
-# 
-# 
+#
+#
+# Lior Kaplan <kaplan@debian.org>, 2004-2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer\n"
+"Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2006-08-30 23:27+0300\n"
+"PO-Revision-Date: 2006-09-09 23:35+0200\n"
 "Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
 "Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #. Type: text
 #. Description
@@ -31,15 +33,14 @@ msgstr "המשך ללא מנהל אתחול"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"כמה משתנים צריכים להקבע ב-Pegasos·OpenFirmware כדי שהמערכת שלך תאתחל את "
-"דביאן אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש. בבקשת הקלט של "
+"מספר משתנים צריכים להקבע ב-Pegasos·OpenFirmware כדי שהמערכת שלך תאתחל את "
+"לינוקס אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש. בבקשת הקלט של "
 "Pegasos·OpenFirmware, תוכל לקבוע את משתני OpenFirmware הבאים כדי לאפשר אתחול "
 "אוטומטי:"
 
@@ -65,7 +66,6 @@ msgstr "הגדרת משתני קושחה (firmware) בשביל אתחול אוט
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -74,20 +74,19 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "כמה משתנים צריכים להקבע ב-Netwinder·NeTTrom·firmware כדי שהמערכת שלך תאתחל "
-"את דביאן אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש, וה-firmware תנסה "
-"לאתחל באופן אוטומטי. תוכל לבטל את זה על ידי לחיצה על מקש כלשהו. במקרה זה "
-"תגיע אל מערכת הפקודות של NeTTrom שם תוכל לבצע את הפקודות הבאות:"
+"את לינוקס אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש, וה-firmware ינסה "
+"לאתחל באופן אוטומטי. תוכל לבטל זאת על ידי לחיצה על מקש כלשהו. במקרה זה תגיע "
+"אל ממשק הפקודות של NeTTrom שם תוכל לבצע את הפקודות הבאות:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"את פעולה זאת תצטרך לעשות רק פעם אחת. לאחר מכן, הכנס את הפקודה boot או אתחל "
-"את המערכת כדי להמשיך לשלב ההתקנה הבא של דביאן."
+"את פעולה זאת תצטרך לעשות רק פעם אחת. לאחר מכן, הכנס את הפקודה \"boot\" או "
+"אתחל את המערכת כדי להמשיך לשלב ההתקנה הבא."
 
 #. Type: note
 #. Description
@@ -108,10 +107,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:52
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"אתה צריך לאתחל ידנית עם הקרנל ${KERNEL} על המחיצה ${BOOT} ו-${ROOT} מועבר "
-"לקרנל כפרמטר."
+"אתה צריך לאתחל ידנית עם הקרנל ${KERNEL} על המחיצה ${BOOT} והפרמטר ${ROOT} "
+"מועבר לקרנל."
