--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -15,13 +15,13 @@ msgstr ""
 "Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2006-09-09 23:35+0200\n"
+"PO-Revision-Date: 2006-09-15 17:06+0300\n"
 "Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
 "Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #. Type: text
 #. Description
@@ -39,7 +39,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"מספר משתנים צריכים להקבע ב-Pegasos·OpenFirmware כדי שהמערכת שלך תאתחל את "
+"מספר משתנים צריכים להיקבע ב-Pegasos·OpenFirmware כדי שהמערכת שלך תאתחל את "
 "לינוקס אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש. בבקשת הקלט של "
 "Pegasos·OpenFirmware, תוכל לקבוע את משתני OpenFirmware הבאים כדי לאפשר אתחול "
 "אוטומטי:"
@@ -73,7 +73,7 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"כמה משתנים צריכים להקבע ב-Netwinder·NeTTrom·firmware כדי שהמערכת שלך תאתחל "
+"כמה משתנים צריכים להיקבע ב-Netwinder·NeTTrom·firmware כדי שהמערכת שלך תאתחל "
 "את לינוקס אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש, וה-firmware ינסה "
 "לאתחל באופן אוטומטי. תוכל לבטל זאת על ידי לחיצה על מקש כלשהו. במקרה זה תגיע "
 "אל ממשק הפקודות של NeTTrom שם תוכל לבצע את הפקודות הבאות:"
