* Patch adapted from one suggested by Sven Luther (closes: #388296):   - Check the Pegasos firmware for versions older than 1.2.99, and     subtract one from the partition number since those start counting     partitions at 0.
r40791

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 nobootloader (1.11) UNRELEASED; urgency=low
 
   * Mark Open Firmware commands as untranslatable.
+  * Patch adapted from one suggested by Sven Luther (closes: #388296):
+    - Check the Pegasos firmware for versions older than 1.2.99, and
+      subtract one from the partition number since those start counting
+      partitions at 0.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 30 Aug 2006 10:12:20 +0100
 
