--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,16 @@
 nobootloader (1.11) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Mark Open Firmware commands as untranslatable.
   * Patch adapted from one suggested by Sven Luther (closes: #388296):
     - Check the Pegasos firmware for versions older than 1.2.99, and
       subtract one from the partition number since those start counting
       partitions at 0.
 
- -- Colin Watson <cjwatson@debian.org>  Wed, 30 Aug 2006 10:12:20 +0100
+  [ Sven Luther ]
+  * Update template for Genisi systems. Closes #388591.
+
+ -- Frans Pop <fjp@debian.org>  Fri, 22 Sep 2006 13:18:54 +0200
 
 nobootloader (1.10) unstable; urgency=low
 
