[l10n] [SILENT_COMMIT] Run debconf-updatepo on all packages
r40838

--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-08-30 10:58+0000\n"
+"POT-Creation-Date: 2006-09-22 22:53+0000\n"
 "PO-Revision-Date: 2005-04-09 14:08+0300\n"
 "Last-Translator: Andrei Darashenka <adorosh2@it.org.by>\n"
 "Language-Team: Byelarusian <be@li.org>\n"
@@ -39,10 +39,10 @@ msgstr "Працягваць"
 #: ../nobootloader.templates:9
 #, fuzzy
 msgid ""
-"Some variables need to be set in the Pegasos OpenFirmware in order for your "
-"system to boot linux automatically.  At the end of the installation, the "
-"system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
-"OpenFirmware variables to enable auto-booting:"
+"Some variables need to be set in the Genesi firmware in order for your "
+"system to boot automatically.  At the end of the installation, the system "
+"will reboot.  At the firmware prompt, set the following firmware variables "
+"to enable auto-booting:"
 msgstr "у у у:"
 
 #. Type: note
@@ -56,18 +56,18 @@ msgstr "у:"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid "at the OpenFirmware prompt."
+msgid "at the firmware prompt."
 msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:32
+#: ../nobootloader.templates:33
 msgid "Setting firmware variables for automatic boot"
 msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:32
+#: ../nobootloader.templates:33
 #, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
@@ -79,23 +79,24 @@ msgstr "у у у у:"
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:32
+#: ../nobootloader.templates:33
 #, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to the next installation stage."
+"or reboot the system to proceed to your newly installed Debian GNU/Linux "
+"system."
 msgstr "у у у."
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:52
+#: ../nobootloader.templates:54
 #, fuzzy
 msgid "No boot loader installed"
 msgstr "Не"
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:52
+#: ../nobootloader.templates:54
 #, fuzzy
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
@@ -104,7 +105,7 @@ msgstr "Не у."
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:52
+#: ../nobootloader.templates:54
 #, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
