--- a/debian/po/hi.po
+++ b/debian/po/hi.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer_packages_po\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-08-30 10:58+0000\n"
+"POT-Creation-Date: 2006-09-22 22:53+0000\n"
 "PO-Revision-Date: 2006-03-12 22:52+0530\n"
 "Last-Translator: Nishant Sharma <me@nishants.net>\n"
 "Language-Team:  <en@li.org>\n"
@@ -41,10 +41,10 @@ msgstr "बिना बूटलोडर के जारी रखें"
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
-"Some variables need to be set in the Pegasos OpenFirmware in order for your "
-"system to boot linux automatically.  At the end of the installation, the "
-"system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
-"OpenFirmware variables to enable auto-booting:"
+"Some variables need to be set in the Genesi firmware in order for your "
+"system to boot automatically.  At the end of the installation, the system "
+"will reboot.  At the firmware prompt, set the following firmware variables "
+"to enable auto-booting:"
 msgstr ""
 
 #. Type: note
@@ -57,18 +57,18 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid "at the OpenFirmware prompt."
+msgid "at the firmware prompt."
 msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:32
+#: ../nobootloader.templates:33
 msgid "Setting firmware variables for automatic boot"
 msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:32
+#: ../nobootloader.templates:33
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -79,21 +79,22 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:32
+#: ../nobootloader.templates:33
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to the next installation stage."
+"or reboot the system to proceed to your newly installed Debian GNU/Linux "
+"system."
 msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:52
+#: ../nobootloader.templates:54
 msgid "No boot loader installed"
 msgstr "कोई बूट लोडर संस्थापित नहीं है"
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:52
+#: ../nobootloader.templates:54
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -101,7 +102,7 @@ msgstr ""
 
 #. Type: note
 #. Description
-#: ../nobootloader.templates:52
+#: ../nobootloader.templates:54
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
