[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r40840

--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -38,9 +38,8 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "يجب تعيين بعض المتغيرات في Pegasos OpenFirmware كي يتمكن نظامك من الإقلاع "
-"آليا. عند نهاية التثبيت، سيتم إعادة تشغيل النظام. عند ملقن Pegasos "
-"OpenFirmware قم بتعيين متغيّرات OpenFirmware التالية لتمكين الإقلاع الآلي "
-"auto-booting:"
+"آليا. عند نهاية التثبيت، سيتم إعادة إقلاع النظام. يجب تعيين متغيرات  "
+"OpenFirmware عند ملقن Pegasos OpenFirmware لتمكين الإقلاع الآلي:"
 
 #. Type: note
 #. Description
