--- a/debian/po/bg.po
+++ b/debian/po/bg.po
@@ -39,7 +39,7 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Някои променливи трябва да бъдат зададени в Pegasos OpenFirmware, за да може "
-"Вашата система да зарежда Linux автоматично. В края на инсталацията "
+"Вашата система да зарежда Debian автоматично. В края на инсталацията "
 "системата ще бъде рестартирана. На подканата на Pegasos OpenFirmware, "
 "задайте следните променливи на OpenFirmware, за да активирате автоматичното "
 "зареждане:"
