--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer etch\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-07-26 20:59+0200\n"
+"PO-Revision-Date: 2006-09-15 10:39+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -39,8 +39,8 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Es necessita establir algunes variables al Pegasos OpenFirmware per a poder "
-"arrencar Linux automàticament. Al final de la instal·lació, el sistema "
-"tornarà a arrencar. A l'indicatiu del Pegasos OpenFirmware, establiu les "
+"arrencar el sistema automàticament. Al final de la instal·lació, el sistema "
+"arrencarà de nou. A l'indicatiu de Pegasos OpenFirmware, establiu les "
 "següents variables d'OpenFirmware per a habilitar l'arrencada automàtica:"
 
 #. Type: note
