--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -14,13 +14,13 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-21 23:40+0200\n"
+"PO-Revision-Date: 2006-09-15 13:29+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
@@ -41,7 +41,7 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Der skal sættes nogle variable i Pegasos OpenFirmware, for at dit system kan "
-"starte Linux op automatisk. Ved afslutningen af installationen vil systemet "
+"starte op automatisk. Ved afslutningen af installationen vil systemet "
 "genstarte. Sæt følgende OpenFirmware-variable ved Pegasos Openfirmware's "
 "prompt for at aktivere automatisk opstart:"
 
