--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-23 23:49+0200\n"
+"PO-Revision-Date: 2006-09-11 21:07+0200\n"
 "Last-Translator: Jens Seidel <jensseidel@users.sf.net>\n"
 "Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -36,7 +36,6 @@ msgstr ""
 msgid "Continue without boot loader"
 msgstr "Ohne Bootloader fortfahren"
 
-# FIXME: Linux-spezifisch
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
@@ -48,9 +47,9 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Einige Variablen müssen in der Pegasos OpenFirmware eingestellt sein, damit "
-"Ihr System Linux automatisch startet. Am Ende der Installation wird das "
-"System neu starten. Stellen Sie die folgenden Pegasos-OpenFirmware-Variablen "
-"am Boot-Prompt ein, damit der Computer automatisch startet:"
+"der Computer automatisch startet. Am Ende der Installation wird der Computer "
+"neu starten. Stellen Sie die folgenden Pegasos-OpenFirmware-Variablen am "
+"Boot-Prompt ein, damit der Computer automatisch startet."
 
 #. Type: note
 #. Description
