--- a/debian/po/el.po
+++ b/debian/po/el.po
@@ -46,10 +46,11 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Πρέπει να καθοριστούν ορισμένες μεταβλητές στο λογισμικό Pegasos "
-"OpenFirmware για να μπορεί το σύστημα σας να ξεκινά αυτόματα στο Linux. Στο "
-"τέλος της εγκατάστασης, θα γίνει επανεκκίνηση του συστήματος. Στο "
-"προτρεπτικό του Pegasos OpenFirmware , ρυθμίστε τις ακόλουθες μεταβλητές του "
-"OpenFirmware για να ενεργοποιήσετε την αυτόματη-εκκίνηση:"
+"OpenFirmware για να μπορέσει το σύστημα σας να εκκινήσει αυτόματα το "
+"σύστημα.  Στο τέλος αυτού του σταδίου της εγκατάστασης, θα γίνει "
+"επανεκκίνηση και το λογισμικό θα προσπαθήσει να κάνει αυτόματη εκκίνηση. "
+"Αυτό θα σας φέρει στην γραμμή εντολών του Pegasos OpenFirmware, όπου "
+"μπορείτε να ορίσετε τις ακόλουθες μεταβλητές:"
 
 #. Type: note
 #. Description
