--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -32,7 +32,7 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Et su süsteem võiks automaatselt linuxi alglaadida, tuleb seada mõned "
+"Et su süsteem võiks automaatselt Debiani alglaadida, tuleb seada mõned "
 "Pegasos OpenFirmware muutujad. Paigaldamise lõpus sooritab süsteem "
 "alglaadimise. Automaatse alglaadimise saavutamiseks sisesta Pegasos "
 "OpenFirmware käsureal järgnevad muutujad:"
