--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -7,16 +7,16 @@
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 # Tommi Vainikainen <thv+debian@iki.fi>, 2003 - 2004
-# Tapio Lehtonen <tale@debian.org>, 2004 - 2005
+# Tapio Lehtonen <tale@debian.org>, 2004 - 2006
 # Thanks to lokalisointi-laatu@linux-aktivaattori.org.
-# 
-# 
+#
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-06 15:53+0300\n"
+"PO-Revision-Date: 2006-09-19 10:11+0300\n"
 "Last-Translator: Tapio Lehtonen <tale@debian.org>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -41,9 +41,9 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Joidenkin muuttujien arvot Pegasos OpenFirmwaressa on asetettava, jotta "
-"järjestelmä käynnistäisi linuxin automaattisesti. Järjestelmä käynnistyy "
-"uudelleen asennuksen lopuksi. Aseta seuraavat muuttujat Pegasos "
-"OpenFirmwaren kehoitteessa, jotta automaattikäynnistys toimii:"
+"järjestelmä käynnistyisi automaattisesti. Järjestelmä käynnistyy uudelleen "
+"asennuksen lopuksi. Aseta seuraavat muuttujat Pegasos OpenFirmwaren "
+"kehotteessa, jotta automaattikäynnistys toimii:"
 
 #. Type: note
 #. Description
