--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-22 09:24+0200\n"
+"PO-Revision-Date: 2006-09-15 09:44+0200\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
 "Language-Team: Galician <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -37,8 +37,8 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "É necesario estabrecer algunhas variables en Pegasos OpenFirmware para que o "
-"seu sistema arrinque linux automaticamente. Ao rematar a instalación, o "
-"sistema hase reiniciar. No indicativo de Pegasos OpenFirmware, estabreza as "
+"seu sistema arrinque automaticamente. Ao rematar a instalación, o sistema "
+"hase reiniciar. No indicativo de Pegasos OpenFirmware, estabreza as "
 "seguintes variables de OpenFirmware para permitir o inicio automático:"
 
 #. Type: note
