--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-20 16:56-0400\n"
+"PO-Revision-Date: 2006-09-14 12:11-0400\n"
 "Last-Translator:  Sunjae park <darehanl@gmail.com>\n"
 "Language-Team:  Korean <debian-l10n-korean@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -37,10 +37,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"리눅스로 자동 부팅하도록 만드려면 Pegasos OpenFirmware 변수 몇 개를 설정해야"
-"합니다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. Pegasos OpenFirmware"
-"프롬프트에서 OpenFirmware 변수를 다음과 같이 설정하면 자동부팅기능을 켤 수있"
-"습니다:"
+"시스템이 자동 부팅하도록 만드려면 Pegasos OpenFirmware에 변수 몇 개를 설정해"
+"야 합니다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. Pegasos "
+"OpenFirmware 프롬프트에서 다음 OpenFirmware 변수를 설정해서 자동 부팅을 켤 "
+"수 있습니다:"
 
 #. Type: note
 #. Description
