--- a/debian/po/lv.po
+++ b/debian/po/lv.po
@@ -40,10 +40,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Pegasos OpenFirmware ir jāuzstāda daži mainīgie, lai jūsu linux sistēma "
-"varētu automātiski ielādēties. Instalācijas beigās sistēma pārsāknēsies. "
-"Pegasos OpenFirmware uzstādījumu izvēles logā uzstādiet sekojošus "
-"OpenFirmware mainīgos, lai aktivizētu sistēmas automātisko ielādi."
+"Lai jūsu sistēma varētu sāknēties automātiski Pegasos OpenFirmware ir "
+"jānorāda daži mainīgie. Šīs instalācijas beigās sistēma pārsāknēsies. Lai "
+"aktivizetu automātisko sāknēšanos Pegasos OpenFirmware iestatījumu izvēlnē "
+"izstādiet sekojošus OpenFirmware mainīgos:"
 
 #. Type: note
 #. Description
