--- a/debian/po/mk.po
+++ b/debian/po/mk.po
@@ -40,9 +40,9 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Некои променливи треба да бидат поставени во Pegasos OpenFirmware за да може "
-"твојот систем да го подигне Линукс автоматски. На крајот од инсталацијата "
-"системот ќе се ресетира. На промтот на Pegasos OpenFirmware, постави ги "
-"следните OpenFirmware променливи за да овозможиш автоматско бутирање:"
+"твојот систем да се подигне автоматски. На крајот од инсталацијата системот "
+"ќе се ресетира. На промтот на Pegasos OpenFirmware, постави ги следните "
+"OpenFirmware променливи за да овозможиш автоматско бутирање:"
 
 #. Type: note
 #. Description
