--- a/debian/po/ne.po
+++ b/debian/po/ne.po
@@ -37,9 +37,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"तपाईँको प्रणालीमा लिनक्सलाई स्वत: बुट गर्नका लागि केही चलहरू Pegasos खुल्ला फर्मवेयरमा "
-"सेट हुनु आवश्यक छ । स्थापनाको चरणको समाप्तीमा, प्रणालीले पुन:बुट गर्दछ । Pegasos खुल्ला "
-"फर्मवेयर प्रोम्प्टमा, स्वत-बुटिङलाई सक्षम गर्न निम्न खुल्ला फर्मवेयर चलहरू सेट गर्नुहोस्:"
+"तपाईँको प्रणालीलाई स्वत: बुट गर्नका लागि Pegasos खुल्ला फर्मवेयरमा केही चलहरू सेट हुन "
+"आवश्यक छ । स्थापनाको समाप्तिमा, प्रणाली पुन: बुट गर्नेछ । Pegasos खुल्ला फर्मवेयर "
+"प्रोम्प्टमा, स्वत: बुटिङलाई सक्षम पार्न निम्न खुल्ला फर्मवेयर चलहरू सेट गर्नुहोस् । "
 
 #. Type: note
 #. Description
