--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-23 10:54+0100\n"
+"PO-Revision-Date: 2006-09-16 14:47+0200\n"
 "Last-Translator: Bart Cornelis <cobaco@skolelinux.no>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -39,11 +39,11 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"In de Pegasos OpenFirmware dienen enkele variabelen te worden ingesteld om "
-"uw systeem Linux automatisch te kunnen laten opstarten. Aan het einde van "
-"het installatieproces zal uw systeem worden herstart. Om automatisch "
-"opstarten mogelijk te maken, dienen bij de OpenFirmware-prompt de volgende "
-"OpenFirmware-variabelen te worden ingesteld:"
+"Sommige variabelen van de Pegasos OpenFirmware dienen ingesteld te worden "
+"opdat uw systeem automatisch zou opstarten. Aan het einde van het "
+"installatieproces zal uw systeem heropgestart worden. Op de OpenFirmware-"
+"prompt dienen de volgende OpenFirmware-variabelen ingesteld te worden om "
+"automatisch opstarten te activeren:"
 
 #. Type: note
 #. Description
