--- a/debian/po/pa.po
+++ b/debian/po/pa.po
@@ -45,9 +45,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"ਕੁਝ ਵੇਰੀਬਲ ਤੁਹਾਡੇ ਸਿਸਟਮ ਨੂੰ ਸਵੈ ਹੀ ਲੀਨਕਸਅਨ ਬੂਟ ਕਰਨ ਲਈ Pegasos OpenFirmware ਵਿੱਚ "
+"ਕੁਝ ਵੇਰੀਬਲ ਤੁਹਾਡੇ ਸਿਸਟਮ ਨੂੰ ਸਵੈ ਹੀ ਡੇਬੀਅਨ ਬੂਟ ਕਰਨ ਲਈ Pegasos OpenFirmware ਵਿੱਚ "
 "ਨਿਰਧਾਰਿਤ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਇੰਸਟਾਲੇਸ਼ਨ ਦੇ ਅੰਤ ਵਿੱਚ ਸਿਸਟਮ ਮੁੜ ਚੱਲੇਗਾ। Pegasos OpenFirmware "
-"ਪਰਾਉਟ ਤੇ, ਸਵ-ਬੂਟਿੰਗ ਯੋਗ ਕਰਨ ਲਈ ਹੇਠਲੇ OpenFirmware ਵੇਰੀਬਲ ਨਿਰਧਾਰਿਤ ਕਰੋ:"
+"ਪ੍ਰਾਂਪਟਾਉਟ ਤੇ,ੈ ਸਵ-ਬੂਟਿੰਗ ਯੋਗ ਕਰਨ ਲਈ ਹੇਠਲੇ OpenFirmware ਵੇਰੀਬਲ ਨਿਰਧਾਰਿਤ ਕਰੋ:"
 
 #. Type: note
 #. Description
