--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-26 22:39+0000\n"
+"PO-Revision-Date: 2006-09-15 22:23+0000\n"
 "Last-Translator:  Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team:  Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -37,9 +37,9 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Algumas variáveis necessitam ser definidas no Pegasos OpenFirmware de modo a "
-"que o seu sistema arranque automaticamente.  No fim da instalação, o sistema "
-"irá reiniciar.  Na linha de comandos do Pegasos OpenFirmware, defina as "
-"seguintes variáveis do OpenFirmware para habilitar o arranque automático:"
+"que o seu sistema Debian arranque automaticamente.  No fim da instalação, o "
+"sistema irá reiniciar.  Na linha de comandos do Pegasos OpenFirmware, defina "
+"as seguintes variáveis do OpenFirmware para habilitar o arranque automático:"
 
 #. Type: note
 #. Description
