--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-29 21:58+0400\n"
+"PO-Revision-Date: 2006-09-15 21:57+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -44,10 +44,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Для автоматического запуска linux требуется установить некоторые переменные "
-"в Pegasos OpenFirmware. В конце установки система будет перезагружена. Из "
-"приглашения Pegasos OpenFirmware установите следующие переменные "
-"OpenFirmware для автозагрузки:"
+"Для автоматического запуска системы требуется установить некоторые "
+"переменные в Pegasos OpenFirmware. В конце установки система будет "
+"перезагружена. Из приглашения Pegasos OpenFirmware установите следующие "
+"переменные для автозагрузки:"
 
 #. Type: note
 #. Description
