--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-27 13:42+0200\n"
+"PO-Revision-Date: 2006-09-12 07:30+0200\n"
 "Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
 "Language-Team:  Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -38,8 +38,8 @@ msgid ""
 msgstr ""
 "Na automatické spúšťanie systému je potrebné nastavenie niektorých "
 "premenných v Pegasos OpenFirmware. Na konci inštalácie sa systém reštartuje. "
-"V príkazovom režime Pegasos OpenFirmware povolíte automatické štartovanie "
-"nastavením nasledovných premenných:"
+"V príkazovom režime Pegasos OpenFirmware môžete umožniť automatické "
+"štartovanie nastavením nasledovných premenných:"
 
 #. Type: note
 #. Description
