--- a/debian/po/sq.po
+++ b/debian/po/sq.po
@@ -39,8 +39,8 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Disa të ndryshueshme nevojitet të caktohen në Pegasos OpenFirmware në mënyrë "
-"që sistemi tënd të nisë linux automatikisht.  Në fund të instalimit, sistemi "
-"do të riniset.  Në rreshtin e komandës Pegasos OpenFirmware, cakto të "
+"që sistemi tënd të nisë automatikisht.  Në fund të instalimit, sistemi do të "
+"riniset.  Në rreshtin e komandës Pegasos OpenFirmware, cakto të "
 "ndryshueshmet e mëposhtme OpenFirmware për të aktivizuar nisjen automatike:"
 
 #. Type: note
