--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-28 06:24+0100\n"
+"PO-Revision-Date: 2006-09-15 07:57+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -46,7 +46,7 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Vissa variabler behöver konfigureras i Pegasos OpenFirmware för att ditt "
-"system ska kunna starta Linux automatiskt.  Vid slutet av installationen "
+"system ska kunna starta upp automatiskt.  Vid slutet av installationen "
 "kommer systemet att startas om.  För att aktivera automatisk start av "
 "systemet ska du vid Pegasos OpenFirmware-prompten ställa in följande "
 "variabler:"
