--- a/debian/po/th.po
+++ b/debian/po/th.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-23 09:09+0700\n"
+"PO-Revision-Date: 2006-09-17 17:09+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <l10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -36,10 +36,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"คุณจำเป็นต้องตั้งค่าตัวแปรบางตัวใน Pegasos OpenFirmware "
-"เพื่อให้เครื่องของคุณบูตเข้าลินุกซ์โดยอัตโนมัติ ในตอนท้ายของการติดตั้ง ระบบจะบูตเครื่องใหม่ "
-"ให้ตั้งค่าตัวแปรของ OpenFirmware ที่บรรทัดคำสั่งของ Pegasos OpenFirmware ดังนี้ "
-"เพื่อเปิดใช้การบูตอัตโนมัติ:"
+"ตัวแปรบางตัวใน Pegasos OpenFirmware จะต้องตั้งค่า "
+"เพื่อให้ระบบของคุณสามารถบูตได้โดยอัตโนมัติ เมื่อเสร็จสิ้นกระบวนการติดตั้งแล้ว ระบบจะเริ่มบูตใหม่ "
+"ที่บรรทัดคำสั่งของ Pegasos OpenFirmware ให้ตั้งค่าของ OpenFirmware ดังนี้ "
+"เพื่อที่จะสามารถบูตได้โดยอัตโนมัติ:"
 
 #. Type: note
 #. Description
