--- a/debian/po/uk.po
+++ b/debian/po/uk.po
@@ -8,19 +8,19 @@
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
-# Eugeniy Meshcheryakov <eugen@univ.kiev.ua>, 2005, 2006.
+# Eugeniy Meshcheryakov <eugen@debian.org>, 2005, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-10 21:54+0200\n"
-"Last-Translator: Eugeniy Meshcheryakov <eugen@univ.kiev.ua>\n"
+"PO-Revision-Date: 2006-09-21 21:05+0200\n"
+"Last-Translator: Eugeniy Meshcheryakov <eugen@debian.org>\n"
 "Language-Team: Ukrainian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
 "10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
@@ -41,10 +41,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Для автоматичного завантаження системи необхідно встановити деякі змінні "
-"Pegasos OpenFirmware. Після закінчення встановлення система "
-"перезавантажиться. Для автоматичного завантаження встановіть наступні змінні "
-"з командного рядка Pegasos OpenFirmware:"
+"Для автоматичного завантаження системи необхідно встановити змінні Pegasos "
+"OpenFirmware. Після закінчення встановлення система перезвантажиться. Для "
+"автоматичного завантаження, встановіть наступні змінні із командного рядка "
+"Pegasos OpenFirmware:"
 
 #. Type: note
 #. Description
