--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-09-05 16:44+0930\n"
+"PO-Revision-Date: 2006-09-21 18:04+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -42,10 +42,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Một số biến cần phải được lập trong Pegasos OpenFirmware để mà hệ thống bạn "
-"tự động khởi động Linux. Tại kết thúc cài đặt, hệ thống sẽ khởi động lại. "
-"Tại dấu nhắc Pegasos OpenFirmware, bạn hãy lập những biến OpenFirmware theo "
-"đây để bật khả năng tự động khởi động:"
+"Cần phải lập một số biến trong Pegasos OpenFirmware để mà hệ thống bạn tự "
+"động khởi động. Tại kết thúc cài đặt, hệ thống sẽ khởi động lại. Tại dấu "
+"nhắc Pegasos OpenFirmware, bạn hãy lập những biến OpenFirmware theo đây để "
+"bật chạy tự động khởi động:"
 
 #. Type: note
 #. Description
