--- a/debian/po/wo.po
+++ b/debian/po/wo.po
@@ -38,10 +38,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Warees naa sampu yenn wariaabal ci mikro-kod Pegasos OpenFirmware ngir sa "
-"sistem bi man demaare ci otomatik. Bu istalaasioŋ bi aggee, sistem bi dana "
-"demaarewaat. Ci woote bu Pegasos OpenFirmware, nanga sampu wariaabal yu "
-"OpenFirmware yii di ñaw ngir nga mana am demaare otomatik:"
+"Warees naa sampu yenn wariaabal ci Pegasos OpenFirmware ngir sa sistem bi "
+"man boot ci otomatik. Bu istalaasioŋ bi aggee, sistem bi dana reboot. Ci "
+"prompt bu Pegasos OpenFirmware, nanga sampu wariaabal yu OpenFirmware yii di "
+"ñaw ngir nga mana am boot otomatik:"
 
 #. Type: note
 #. Description
