--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -40,9 +40,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"要使系统能自动启动 linux，您需要在 Pegasos OpenFirmware 中设置一些变量。在安"
-"装结束后，系统将会重启。在出现 Pegasos OpenFirmware 提示符后，请设置以下几个 "
-"OpenFirmware 变量以开启自动启动功能："
+"要使系统能自动启动您的系统，您需要在 Pegasos OpenFirmware 中设置一些变量。在"
+"安装结束后，系统将会重启。在出现 Pegasos OpenFirmware 提示符后，请设置以下几"
+"个 OpenFirmware 变量以开启自动启动功能："
 
 #. Type: note
 #. Description
