--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -43,8 +43,8 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Neke varijable se trebaju postaviti Pegasos OpenFirmware-u kako bi vaš "
-"sistem automatski podizao linux.  Na kraju instalacije, sistem će se ponovo "
+"Neke varijable se trebaju postaviti Pegasos OpenFirmware-u kako bi Vaš "
+"sistem automatski podizao.  Na kraju instalacije, sistem će se ponovo "
 "podići.  Na Pegasos OpenFirmware promptu, postavite slijedeće OpenFirmware "
 "varijable kako bi omogućili automatsko podizanje:"
 
