--- a/debian/po/dz.po
+++ b/debian/po/dz.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: dz\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2004-08-28 22:28+0530\n"
+"PO-Revision-Date: 2006-09-17 22:37+0530\n"
 "Last-Translator: Jurmey Rabgay <jur_gay@yahoo.com>\n"
 "Language-Team: Dzongkha <pgeyleg@dit.gov.bt>\n"
 "MIME-Version: 1.0\n"
@@ -43,10 +43,10 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"ཁྱོད་ཀྱི་རིམ་ལུགས་བུཊི་ལའི་ནགསི་རང་བཞིན་གྱིས་འགོ་རིམ་འབད་ནིའི་དོན་ལུ་པི་ག་སཱོས་ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་"
-"ནང་འགྱུར་ཅན་ཚུ་ལ་ལོ་ཅིག་གཞི་སྒྲིག་འབད་དགོ། གཞི་བཙུགས་འབད་མིའི་མཇུག་ལུ་རིམ་ལུགས་འདི་ལོག་བུཊི་འབད་འོང་"
-"། པི་ག་སཱོས་ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་ལུ་ནུས་སྤེལ་བྱིནམ་ད་ རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་ལྕོགས་ཅན་བཟོ་ནི་"
-"ལུ་འོག་གི་ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འགྱུར་ཅན་ཚུ་གཞི་སྒྲིག་འབད།"
+"ཁྱོད་ཀྱི་རིམ་ལུགས་རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་དོན་ལུ་པི་ག་སཱོས་ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་ནང་འགྱུར་ཅན་ཚུ་"
+"ལ་ལོ་ཅིག་གཞི་སྒྲིག་འབད་དགོ། གཞི་བཙུགས་འབད་བའི་མཇུག་ལུ་རིམ་ལུགས་འདི་བུཊི་འབད་བཏུབ། པེ་ག་སཱོས་འདི་ལུ་"
+"ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འདི་གིས་ནུས་སྤེལ་བྱིནམ་ད་ འོག་གི་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འགྱུར་ཅན་ཚུ་རང་བཞིན་-"
+"བུཊི་འབད་ནིའི་ལྕོགས་ཅན་བཟོ་ནི་ལུ་གཞི་སྒྲིག་འབད།"
 
 #. Type: note
 #. Description
