--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -12,7 +12,7 @@
 # David Martínez Moreno <ender@debian.org>, 2003, 2005.
 # Carlos Alberto Martín Edo <carlos@dat.etsit.upm.es>, 2003
 # Carlos Valdivia Yagüe <valyag@dat.etsit.upm.es>, 2003
-# Rudy Godoy <rudy@kernel-panik.org>, 2003
+# Rudy Godoy <rudy@kernel-panik.org>, 2003-2006
 # Steve Langasek <vorlon@debian.org>, 2004
 # Enrique Matias Sanchez (aka Quique) <cronopios@gmail.com>, 2005
 # Rubén Porras Campo <nahoo@inicia.es>, 2005
@@ -49,7 +49,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-30 00:04+0200\n"
+"PO-Revision-Date: 2006-09-15 00:54+0200\n"
 "Last-Translator: Javier Fernández-Sanguino Peña <jfs@debian.org>\n"
 "Language-Team:  Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -74,8 +74,8 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Debe establecer algunas variables en el «OpenFirmware» de Pegasos para poder "
-"arrancar el sistema linux de forma automática. Al final de la instalación el "
-"sistema se reiniciará. En el símbolo de espera de órdenes de «OpenFirmware» "
+"arrancar el sistema de forma automática. Al final de la instalación el "
+"sistema reiniciará. En el símbolo de espera de órdenes de «OpenFirmware» "
 "establezca las variables que se indican a continuación para activar el "
 "arranque automático:"
 
