--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -42,7 +42,7 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Aldagai batzuk Pegasos OpenFirmware-n ezarri behar dira sistemak "
+"Aldagai batzuk Pegasos OpenFirmware-n ezarri behar dira zure sistemak Debian "
 "automatikoki abiaraz dezan.  Instalazioaren amaieran, sistema berrabiarazi "
 "egingo da. Pegasos OpenFirmware prompt gonbitean, ezarri OpenFirmware-ren "
 "aldagai hauek automatikoki abiaraztea gaitzeko:"
