--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -40,8 +40,8 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"מספר משתנים צריכים להיקבע ב-Pegasos·OpenFirmware כדי שהמערכת שלך תאתחל את "
-"לינוקס אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש. בבקשת הקלט של "
+"כמה משתנים צריכים להיקבע ב-Pegasos·OpenFirmware כדי שהמערכת שלך תאתחל את "
+"דביאן אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש. בבקשת הקלט של "
 "Pegasos·OpenFirmware, תוכל לקבוע את משתני OpenFirmware הבאים כדי לאפשר אתחול "
 "אוטומטי:"
 
