--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -26,7 +26,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-27 12:52+0200\n"
+"PO-Revision-Date: 2006-09-16 19:16+0200\n"
 "Last-Translator: Giuseppe Sacco <eppesuig@debian.org>\n"
 "Language-Team:   Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -51,9 +51,9 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Alcune variabili di Pegasos OpenFirmware vanno impostate per poter avviare "
-"il sistema in automatico. Al termine della installazione il sistema verrà "
-"riavviato. Al prompt di Pegasos OpenFirmware le seguenti variabili dovranno "
-"essere impostate per permettere l'avvio automatico:"
+"il sistema Debian in automatico. Al termine della installazione il sistema "
+"verrà riavviato. Al prompt di Pegasos OpenFirmware le seguenti variabili "
+"dovranno essere impostate per permettere l'avvio automatico:"
 
 #. Type: note
 #. Description
