--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-29 20:46+0900\n"
+"PO-Revision-Date: 2006-09-21 23:04+0900\n"
 "Last-Translator:  Kenshi Muto <kmuto@debian.org>\n"
 "Language-Team: Debian L10n Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -36,7 +36,7 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"あなたのシステムで linux を自動的に起動するために、Pegasos OpenFirmware にい"
+"あなたのシステムで Debian を自動的に起動するために、Pegasos OpenFirmware にい"
 "くつかの変数を設定する必要があります。このインストールの終わりに、システムは"
 "再起動します。Pegasos OpenFirmware プロンプトでは、自動起動できるように、次の"
 "ように OpenFirmware 変数を設定します:"
