--- a/debian/po/km.po
+++ b/debian/po/km.po
@@ -42,9 +42,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"អ្នក​ត្រូវ​កំណត់​អថេរ​មួយ​ចំនួន​នៅ​ក្នុង Pegasos OpenFirmware ដើម្បី​ឲ្យ​ប្រព័ន្ធ​របស់​អ្នក​អាច​ចាប់ផ្ដើម​លីនុច​"
-"ដោយ​ស្វ័យប្រវត្តិ ។ នៅ​ចុងបញ្ចប់​នៃ​ការ​ដំឡើង ប្រព័ន្ធ​នឹង​ចាប់ផ្ដើម​ឡើង​វិញ ។ នៅ​ត្រង់​ប្រអប់ Pegasos "
-"OpenFirmware ចូរ​កំណត់​អថេរ OpenFirmware ខាង​ក្រោម​ដើម្បី​បើក​ការ​ចាប់ផ្ដើម​ស្វ័យប្រវត្តិ ៖"
+"អ្នក​ត្រូវ​កំណត់​អថេរ​មួយ​ចំនួន​នៅ​ក្នុង Pegasos OpenFirmware ដើម្បី​ឲ្យ​ប្រព័ន្ធ​របស់​អ្នក​អាច​ចាប់ផ្ដើម​ដោយ​"
+"ស្វ័យប្រវត្តិ ។ នៅ​ចុងបញ្ចប់​នៃ​ការ​ដំឡើង ប្រព័ន្ធ​នឹង​ចាប់ផ្ដើម​ឡើង​វិញ ។ នៅ​ត្រង់​ប្រអប់ Pegasos "
+"OpenFirmware ចូរ​កំណត់​អថេរ OpenFirmware ខាង​ក្រោម​ដើម្បី​បើក​ការ​ចាប់ផ្ដើម​ស្វ័យប្រវត្តិ ៖"
 
 #. Type: note
 #. Description
