--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-22 22:53+0000\n"
-"PO-Revision-Date: 2006-08-10 12:19+0200\n"
+"PO-Revision-Date: 2006-09-09 20:18+0200\n"
 "Last-Translator: Bjørn Steensrud <bjornst@powertech.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -43,9 +43,9 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Noen variabler i Pegasos OpenFirmware må være angitt for at systemet skal "
-"kunne starte linux automatisk. På slutten av installasjonen vil systemet "
-"starte på nytt. På kommandolinja for Pegasos OpenFirmware kan du angi "
-"følgende variabler for OpenFirmware for å aktivere auto-oppstart:"
+"kunne starte automatisk. På slutten av installasjonen vil systemet starte på "
+"nytt. På kommandolinja for Pegasos OpenFirmware kan du angi følgende "
+"variabler for OpenFirmware for å aktivere auto-oppstart:"
 
 #. Type: note
 #. Description
