[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r40852

--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -19,14 +19,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-08-29 07:53+0200\n"
+"PO-Revision-Date: 2006-09-23 08:10+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #. Type: text
 #. Description
@@ -38,18 +38,16 @@ msgstr "Continuer sans programme de démarrage"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Certaines variables doivent être positionnées dans le micro-code "
-"OpenFirmware Pegasos afin que votre système puisse démarrer automatiquement. "
-"À la fin de cette étape d'installation, le système redémarrera. À l'invite "
-"de l'OpenFirmware Pegasos, positionnez les variables suivantes pour activer "
-"le démarrage automatique :"
+"Certaines variables doivent être positionnées dans le micro-code Genesi afin "
+"que votre système puisse démarrer automatiquement. À la fin de cette étape "
+"d'installation, le système redémarrera. À l'invite du micro-code, "
+"positionnez les variables suivantes pour activer le démarrage automatique :"
 
 #. Type: note
 #. Description
@@ -61,9 +59,8 @@ msgstr "Le noyau pourra également être démarré manuellement avec :"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "à l'invite d'OpenFirmware."
+msgstr "à l'invite du micro-code."
 
 #. Type: note
 #. Description
@@ -98,8 +95,8 @@ msgid ""
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Cette opération ne doit être effectuée qu'une seule fois. Après cela, "
-"utilisez la commande « boot » ou redémarrez le système pour continuer "
-"l'installation."
+"utilisez la commande « boot » ou redémarrez pour utiliser le système "
+"installé."
 
 #. Type: note
 #. Description
