--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-15 07:57+0100\n"
+"PO-Revision-Date: 2006-09-23 09:48+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -38,18 +38,16 @@ msgstr "Fortsätt utan starthanterare"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Vissa variabler behöver konfigureras i Pegasos OpenFirmware för att ditt "
+"Vissa variabler behöver ställas in i Genesis fasta programvara för att ditt "
 "system ska kunna starta upp automatiskt.  Vid slutet av installationen "
-"kommer systemet att startas om.  För att aktivera automatisk start av "
-"systemet ska du vid Pegasos OpenFirmware-prompten ställa in följande "
-"variabler:"
+"kommer systemet att startas om.  Ställ in följande variabler vid den fasta "
+"programvarans prompt för att aktivera automatisk uppstart:"
 
 #. Type: note
 #. Description
@@ -61,9 +59,8 @@ msgstr "Alternativt kan du starta kärnan manuellt genom att ange:"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "vid OpenFirmware-prompten."
+msgstr "vid den fasta programvarans prompt."
 
 #. Type: note
 #. Description
@@ -81,12 +78,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Vissa variabler behöver konfigureras i Netwinder NeTTroms fasta program "
-"(firmware) för att ditt system ska kunna starta Linux automatiskt.  Vid "
-"slutet av den här installationsfasen kommer ditt system att starta om och "
-"det fasta programmet kommer att försöka att starta datorn automatiskt. Du "
-"kan avbryta det här genom att trycka på valfri tangent. Du kommer då att "
-"hamna i NeTTroms kommandosystem där du måste exekvera följande kommandon:"
+"Vissa variabler behöver konfigureras i Netwinder NeTTroms fasta programvara "
+"för att ditt system ska kunna starta Linux automatiskt.  Vid slutet av den "
+"här installationsfasen kommer ditt system att starta om och den fasta "
+"programvaran kommer att försöka att starta datorn automatiskt. Du kan "
+"avbryta det här genom att trycka på valfri tangent. Du kommer då att hamna i "
+"NeTTroms kommandosystem där du måste exekvera följande kommandon:"
 
 #. Type: note
 #. Description
@@ -96,9 +93,9 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Du kommer bara att behöva göra det här en gång.  Efteråt ska du ange "
-"kommandot \"boot\" eller starta om systemet för att gå vidare till nästa "
-"steg i installationen."
+"Du kommer endast behöva göra det här en gång.  Efteråt ska du ange kommandot "
+"\"boot\" eller starta om systemet till ditt nyligen installerade Debian GNU/"
+"Linux-system."
 
 #. Type: note
 #. Description
